--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ header h1, header h3{
 }
 
 #section {
+    display: flex;
+    flex-direction: column;
     margin: 20px 0 0 0;
     align-items: center;
     justify-content: center;
@@ -89,7 +91,7 @@ header h1, header h3{
     margin: 0 0 10px 0;
 }
 
-.post *, .inputSection * {
+.post *, .inputSection *, #output img {
     max-width: 100%;
     height: auto;
 }
@@ -113,4 +115,8 @@ header h1, header h3{
     background-color: #1a1a1b;
     width: 300px;
     padding: 10px;
+}
+
+#output {
+    width: 300px;
 }
