--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Karla', sans-serif;
     background-color: #030303;
     color: #eaece5;
-    margin: 0 !important;
+    margin: 0 0 100px 0 !important;
 }
 
 header h1, header h3{
@@ -187,4 +187,26 @@ header h1, header h3{
 .colorName {
     font-weight: 700;
     text-transform: uppercase;
+}
+
+/* About Specific */
+#aboutSection {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+#aboutText {
+    margin: 100px 0 0 0;
+    display: flex;
+    width: 40%;
+    flex-direction: column;
+}
+
+#aboutText p {
+    margin: 0 0 8px 0;
+}
+
+#aboutText h3 {
+    margin-top: 50px;
 }
