--- a/style.css
+++ b/style.css
@@ -96,22 +96,6 @@ header h1, header h3{
     height: auto;
 }
 
-@media (max-width: 800px) {
-    header h1 {
-        position: absolute;
-        top: 5px;
-        font-size: 1.3em;
-    }
-
-    header h3 {
-        visibility: hidden;
-    }
-
-    .post {
-        width: 90vw;
-    }
-}
-
 /* Blend Specific */
 
 #inputs {
@@ -209,4 +193,24 @@ header h1, header h3{
 
 #aboutText h3 {
     margin-top: 50px;
+}
+
+@media (max-width: 1000px) {
+    header h1 {
+        position: absolute;
+        top: 5px;
+        font-size: 1.3em;
+    }
+
+    header h3 {
+        visibility: hidden;
+    }
+
+    .post {
+        width: 90vw;
+    }
+
+    #aboutText {
+        width: 90%;
+    }
 }
