added image upscaling

--- a/style.css
+++ b/style.css
@@ -96,6 +96,14 @@ header h1, header h3{
     height: auto;
 }
 
+#upscaledImage img{
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
+}
+
 /* Blend Specific */
 
 #inputs {
